HTML version of VDMToolkit.thy

--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Toolkit/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Toolkit/index.html
@@ -19,6 +19,8 @@ View <a href="document.pdf">document</a></p>
 <h2>Theories</h2>
 
 <ul>
+<li><a href="VDMEisbach.html">VDMEisbach</a></li>
+
 <li><a href="VDMToolkit.html">VDMToolkit</a></li>
 </ul>
 </div>
