some documentation and ROOT file preparation

--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/index.html
@@ -12,6 +12,12 @@
 
 <div class="sessions">
 <dl>
+<dt><a href="VDM-Examples/index.html">VDM-Examples</a></dt>
+
+<dd><br/>
+<pre>    VDM Toolkit examples.</pre>
+</dd>
+
 <dt><a href="VDM-Toolkit/index.html">VDM-Toolkit</a></dt>
 
 <dd><br/>
