--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
@@ -22,6 +22,8 @@ View <a href="document.pdf">document</a></p>
 <li><a href="VDMToolkit.html">VDMToolkit</a></li>
 
 <li><a href="RecursiveSet.html">RecursiveSet</a></li>
+
+<li><a href="RecursiveVDMNat.html">RecursiveVDMNat</a></li>
 </ul>
 </div>
 </body>
