--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
@@ -21,9 +21,11 @@ View <a href="document.pdf">document</a></p>
 <ul>
 <li><a href="VDMToolkit.html">VDMToolkit</a></li>
 
+<li><a href="RecursiveVDMNat.html">RecursiveVDMNat</a></li>
+
 <li><a href="RecursiveSet.html">RecursiveSet</a></li>
 
-<li><a href="RecursiveVDMNat.html">RecursiveVDMNat</a></li>
+<li><a href="RecursiveVDMMap.html">RecursiveVDMMap</a></li>
 </ul>
 </div>
 </body>
